cabal-version:       2.2
name:                iban
version:             0.2.1.0
synopsis:            Validate and generate IBANs
description:         A library to validate and generate (for now only German) IBANs.
homepage:            https://github.com/ibotty/iban
license:             BSD-3-Clause
license-file:        LICENSE
author:              Tobias Florek
maintainer:          tob@butter.sh
copyright:           Tobias Florek, 2014
category:            Finance
build-type:          Simple
extra-source-files:  Changelog.md

common dependencies
  build-depends:       base >=4.5 && <5
                     , containers >=0.3 && <0.8
                     , iso3166-country-codes
                     , text >=0.11 && <2.2
                     , unordered-containers
                     , attoparsec
                     , validity
                     , validity-text
                     , genvalidity
                     , genvalidity-text
                     , template-haskell
                     , QuickCheck
                     , th-lift-instances
library
  import:              dependencies
  exposed-modules:     Finance.IBAN
                     , Finance.IBAN.Internal
                     , Finance.IBAN.Germany
                     , Finance.IBAN.Germany.Core
                     , Finance.IBAN.Germany.Data
                     , Finance.IBAN.Data
                     , Finance.IBAN.Structure
  other-modules:       Contrib.Data.ISO3166_CountryCodes
  other-extensions:    OverloadedStrings
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  import:              dependencies
  other-extensions:    OverloadedStrings
  other-modules:       Finance.IBAN
                     , Finance.IBAN.Internal
                     , Finance.IBAN.Germany
                     , Finance.IBAN.Germany.Core
                     , Finance.IBAN.Germany.Data
                     , Finance.IBAN.Data
                     , Finance.IBAN.Structure
                     , IBANRegistryExamples
                     , Contrib.Data.ISO3166_CountryCodes
  build-depends:       base
                     , HUnit
                     , tasty
                     , tasty-hunit
                     , text
                     , tasty-quickcheck
                     , tasty-hspec
                     , genvalidity-hspec
  hs-source-dirs:      test
                     , src
  main-is:             Main.hs
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0

-- flag maintenance-tools
--   description:       Build tools to generate data files from original sources
--   default:           False
--   manual:            True

-- executable blz
--   other-extensions:    OverloadedStrings
--   -- exposed-modules:
--   hs-source-dirs:    tools
--   build-depends:       base
--                      , bytestring >=0.9 && <0.11
--                      , cassava == 0.4.*
--                      , iban
--                      , text
--                      , vector == 0.10.*
--   main-is:             Blz.hs
--   default-language:    Haskell2010
--   if true
--   -- if flag(maintenance-tools)
--     buildable:       True
--   else
--     buildable:       False

source-repository head
  type:              git
  location:          https://github.com/ibotty/iban
